[package]
name = "basics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
futures-util = "0.3.28"
reqwest = { version = "0.11.18", features = ["blocking", "rustls-tls"] }
scraper = "0.16.0"
thiserror = "1.0.40"
http = "0.2.9"
tokio = { version = "1.28.1", features = ["full"] }
tokio-websockets = "0.3.2"

